new footer version

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -49,7 +49,7 @@
 
     <div class="footer__copy">
       <p>&copy 2021</p>
-      <p>we <i class="fas fa-heart"></i> components</p>
+      <p>we <i class="fas fa-heart"></i> <span> components</span></p>
     </div>
   </div>
 </footer>
