--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -10,7 +10,7 @@ $cerulean: #0271bc;
 $dark-grey-blue: #304268;
 $ice-blue: #eff9ff;
 $white: white;
-
+$black: black;
 // mixins
 @mixin flexColumnCentered {
   display: flex;
