--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .container {
-  background-color: $dark-grey-blue;
+  background-color: $cerulean;
   position: relative;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .footer {
-  color: $white;
+  color: $black;
   @include flexColumnCentered;
   padding: 60px 0 45px;
 
@@ -39,7 +39,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 45px 39px;
+    padding: 45px 45px;
   }
 
   @media all and (min-width: 1200px) {
@@ -52,11 +52,12 @@
     list-style: none;
     @include flexColumnCentered;
     line-height: 30px;
-    padding: 15px 0;
+    /*padding: 15px 0 45px;*/
+    /* padding-bottom: 45px; */
 
     @media all and (min-width: 768px) {
       align-items: flex-start;
-      padding-right: 15px;
+      padding-right: 45px;
       padding-top: 0;
       padding-bottom: 0;
       width: 210px;
@@ -64,11 +65,11 @@
 
     @media all and (min-width: 1200px) {
       width: 160px;
-      padding-left: 15px;
+      padding-left: 0px;
     }
     &--link {
       text-decoration: none;
-      color: $white;
+      color: $black;
       text-transform: uppercase;
       font-size: 16px;
     }
@@ -78,23 +79,29 @@
     @include flexColumnCentered;
     font-size: 14px;
     line-height: 30px;
-    padding-top: 15px;
+    /*padding-top: 15px;*/
     line-height: 30px;
 
     @media (min-width: 768px) {
-      order: -1;
+      order: 3;
       align-items: flex-start;
-      padding: 0 15px;
+      /*padding: 0 15px; */
+      /*padding-right: 45px; */
       width: 210px;
     }
     @media all and (min-width: 1200px) {
       width: 160px;
-      padding-right: 15px;
-     
+      padding-right: 45px;
     }
   }
 }
 
 .fas {
   color: $bright-orange;
+}
+
+span {
+  @media (min-width: 768px) {
+    color: $bright-orange;
+  }
 }
