--- a/src/html/partials/mainSection1.html
+++ b/src/html/partials/mainSection1.html
@@ -1,6 +1,6 @@
 <main class="main">
     <section class="main__section1">
-        <p class="main__section1--small">Insomnia Tips</p>
+        <h6 class="main__section1--small">Insomnia Tips</h6>
         <h2 class="main__section1--title">Looking Through a Window</h2>
         <p class="main__section1--description">
             Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
