corrected button in 3 reasons

--- a/src/html/partials/mainSection2.html
+++ b/src/html/partials/mainSection2.html
@@ -21,7 +21,8 @@
 
     </article>
 
-    <div class="main__section2--item5 buttonSection2"> More reasons</div>
+    <div class="main__section2--item5 buttonSection2"> <a class="buttonLink" href="" title="" target="" alt="">
+            More reasons</a></div>
 
 
 </section>
